--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <img class="title-logo" src="images/trident.png" alt="Trident Logo">
+          <img class="title-logo" src="images/profile_pic_small.jpg" alt="Profile Pic">
         </div>
         <div class="col-md-6 text-right text-uppercase">
           <h1 class="title-super text-thin">Jeffrey Barnes</h1>
@@ -28,7 +28,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <img class="img-responsive img-rounded modal-content" src="images/coral_reef.jpg" alt="Coral Reef image">
+          <img class="img-responsive img-rounded modal-content" src="images/code_wallpaper.jpg" alt="Computer Code Wallpaper">
         </div>
       </div>
       <div class="row">
@@ -38,19 +38,19 @@
       </div>
       <div class="row text-center">
         <div class="col-md-4">
-          <img class="img-responsive img-rounded modal-content" src="images/pastel_ocean.jpg" alt="Sunset over the ocean" data-toggle="modal" data-target="#resume">
+          <img class="img-responsive img-rounded modal-content" src="images/Resume.jpg" alt="My Resume" data-toggle="modal" data-target="#resume">
           <h3 class="text-uppercase">Resume</h3>
-          <p><a href="http://www.github.com/belgerion">http://www.github.com/belgerion</a></p>
+          <p><a href="http://belgerion.github.io/resume/">http://belgerion.github.io/resume/</a></p>
         </div>
         <div class="col-md-4">
-          <img class="img-responsive img-rounded modal-content" src="images/beach.jpg" alt="Waves on a rockey beach" data-toggle="modal" data-target="#game">
-          <h3 class="text-uppercase">Frogger Game</h3>
-          <p><a href="http://www.github.com/belgerion">http://www.github.com/belgerion</a></p>
+          <img class="img-responsive img-rounded modal-content" src="images/java_game.jpg" alt="Frogger Clone" data-toggle="modal" data-target="#game">
+          <h3 class="text-uppercase">Frogger Game Clone</h3>
+          <p><a href="http://belgerion.github.io/frogger/">http://belgerion.github.io/frogger/</a></p>
         </div>
         <div class="col-md-4">
-          <img class="img-responsive img-rounded modal-content" src="images/volcano_lightning.jpeg" alt="Lightning striking an erupting volcano" data-toggle="modal" data-target="#map">
+          <img class="img-responsive img-rounded modal-content" src="images/tourist_map.jpg" alt="Local Tourist Map" data-toggle="modal" data-target="#map">
           <h3 class="text-uppercase">Neighborhood Map</h3>
-          <p><a href="http://www.github.com/belgerion">http://www.github.com/belgerion</a></p>
+          <p><a href="http://belgerion.github.io/map/">http://belgerion.github.io/map/</a></p>
         </div>
       </div>
     </div>
@@ -63,17 +63,15 @@
             <h4 class="modal-title" id="inter-resume">Resume</h4>
           </div>
           <div class="modal-body">
-            <img class="img-responsive img-rounded modal-content" src="images/pastel_ocean.jpg" alt="Sunset over the ocean">
-            <p>Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.
-            Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec ullamcorper nulla non metus auctor fringilla.
-            Maecenas sed diam eget risus varius blandit sit amet non magna. Donec id elit non mi porta gravida at eget metus. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+            <img class="img-responsive img-rounded modal-content" src="images/resume.jpg" alt="My Resume">
+            <p>My online resume. Built using JavaScript attached to the HTML.</p>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
-    </div> 
+    </div>
     <div class="modal fade" id="game" tabindex="-1" role="dialog" aria-labelledby="game" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
@@ -81,17 +79,15 @@
             <h4 class="modal-title" id="frogger-game">Frogger Game</h4>
           </div>
           <div class="modal-body">
-            <img class="img-responsive img-rounded modal-content" src="images/beach.jpg" alt="Waves on a rockey beach">
-            <p>Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.
-            Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec ullamcorper nulla non metus auctor fringilla.
-            Maecenas sed diam eget risus varius blandit sit amet non magna. Donec id elit non mi porta gravida at eget metus. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+            <img class="img-responsive img-rounded modal-content" src="images/java_game.jpg" alt="Frogger Clone">
+            <p>This is a Frogger clone, made in JavaScript, for the third project of the Front-End Web Developer NanoDegree at Udacity. The player moves and resets based on the players input and impact with the bugs. Control is done with the arrow keys.</p>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
-    </div> 
+    </div>
     <div class="modal fade" id="map" tabindex="-1" role="dialog" aria-labelledby="map" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
@@ -99,16 +95,14 @@
             <h4 class="modal-title" id="neighbor-map">Neighborhood Map</h4>
           </div>
           <div class="modal-body">
-            <img class="img-responsive img-rounded modal-content" src="images/volcano_lightning.jpeg" alt="Lightning striking an erupting volcano">
-            <p>Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.
-            Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec ullamcorper nulla non metus auctor fringilla.
-            Maecenas sed diam eget risus varius blandit sit amet non magna. Donec id elit non mi porta gravida at eget metus. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+            <img class="img-responsive img-rounded modal-content" src="images/tourist_map.jpg" alt="Local Tourist Map">
+            <p>A responsive Google map of local tourist locations. Takes any U.S. city and finds nearby tourist locations on Google maps, and finds images from Flickr that are tagged with that location. Built using the Knockout.js framework for responsive HTML.</p>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
-    </div> 
+    </div>
   </body>
 </html>
