--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
       <div class="row text-center">
         <div class="col-md-4">
-          <img class="img-responsive img-rounded modal-content" src="images/Resume.jpg" alt="My Resume" data-toggle="modal" data-target="#resume">
+          <img class="img-responsive img-rounded modal-content" src="images/resume.jpg" alt="My Resume" data-toggle="modal" data-target="#resume">
           <h3 class="text-uppercase">Resume</h3>
           <p><a href="http://belgerion.github.io/resume/">http://belgerion.github.io/resume/</a></p>
         </div>
