--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
           <p><a href="http://belgerion.github.io/resume/">http://belgerion.github.io/resume/</a></p>
         </div>
         <div class="col-md-4">
-          <img class="img-responsive img-rounded modal-content" src="images/java_game.jpg" alt="Frogger Clone" data-toggle="modal" data-target="#game">
-          <h3 class="text-uppercase">Frogger Game Clone</h3>
-          <p><a href="http://belgerion.github.io/frogger/">http://belgerion.github.io/frogger/</a></p>
+          <img class="img-responsive img-rounded modal-content" src="images/spokes_ss.png" alt="Spokes Website Screenshot" data-toggle="modal" data-target="#game">
+          <h3 class="text-uppercase">Spokes Unlimited Redesign</h3>
+          <p><a href="http://www.spokesunlimited.org">http://www.spokesunlimited.org</a></p>
         </div>
         <div class="col-md-4">
           <img class="img-responsive img-rounded modal-content" src="images/tourist_map.jpg" alt="Local Tourist Map" data-toggle="modal" data-target="#map">
@@ -76,11 +76,11 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title" id="frogger-game">Frogger Game</h4>
+            <h4 class="modal-title" id="frogger-game">Spokes Unlimited Redesign</h4>
           </div>
           <div class="modal-body">
-            <img class="img-responsive img-rounded modal-content" src="images/java_game.jpg" alt="Frogger Clone">
-            <p>This is a Frogger clone, made in JavaScript, for the third project of the Front-End Web Developer NanoDegree at Udacity. The player moves and resets based on the players input and impact with the bugs. Control is done with the arrow keys.</p>
+            <img class="img-responsive img-rounded modal-content" src="images/spokes_ss.png" alt="Spokes Website Screenshot">
+            <p>This is a fully redesigned and developed site done for the non-profit Spokes Unlimited. It was built using HTML/CSS and JavaScript, before being converted into a Joomla template and website.</p>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
