--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <img class="title-logo" src="images/profile_pic_small.jpg" alt="Profile Pic">
+          <img class="title-logo" src="" alt="">
         </div>
         <div class="col-md-6 text-right text-uppercase">
           <h1 class="title-super text-thin">Jeffrey Barnes</h1>
@@ -38,9 +38,9 @@
       </div>
       <div class="row text-center">
         <div class="col-md-4">
-          <img class="img-responsive img-rounded modal-content" src="images/resume.jpg" alt="My Resume" data-toggle="modal" data-target="#resume">
+          <img class="img-responsive img-rounded modal-content" src="images/church_ss.png" alt="Grace website" data-toggle="modal" data-target="#resume">
           <h3 class="text-uppercase">Resume</h3>
-          <p><a href="http://belgerion.github.io/resume/">http://belgerion.github.io/resume/</a></p>
+          <p><a href="http://www.anacondagrace.com">http://www.anacondagrace.com</a></p>
         </div>
         <div class="col-md-4">
           <img class="img-responsive img-rounded modal-content" src="images/spokes_ss.png" alt="Spokes Website Screenshot" data-toggle="modal" data-target="#game">
@@ -63,8 +63,8 @@
             <h4 class="modal-title" id="inter-resume">Resume</h4>
           </div>
           <div class="modal-body">
-            <img class="img-responsive img-rounded modal-content" src="images/resume.jpg" alt="My Resume">
-            <p>My online resume. Built using JavaScript attached to the HTML.</p>
+            <img class="img-responsive img-rounded modal-content" src="images/church_ss.png" alt="Grace Website">
+            <p>Website developed for a small church, using Joomla with a custom template and custom created logo.</p>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
