--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="row text-center">
         <div class="col-md-4">
           <img class="img-responsive img-rounded modal-content" src="images/church_ss.png" alt="Grace website" data-toggle="modal" data-target="#resume">
-          <h3 class="text-uppercase">Resume</h3>
+          <h3 class="text-uppercase">Grace Baptist Church Website Development</h3>
           <p><a href="http://www.anacondagrace.com">http://www.anacondagrace.com</a></p>
         </div>
         <div class="col-md-4">
