--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title" id="inter-resume">Resume</h4>
+            <h4 class="modal-title" id="inter-resume">Grace Baptist Church Website</h4>
           </div>
           <div class="modal-body">
             <img class="img-responsive img-rounded modal-content" src="images/church_ss.png" alt="Grace Website">
