added new content

--- a/index.html
+++ b/index.html
@@ -53,6 +53,23 @@
           <p><a href="http://belgerion.github.io/map/">http://belgerion.github.io/map/</a></p>
         </div>
       </div>
+	  <div class="row text-center">
+        <div class="col-md-4">
+          <img class="img-responsive img-rounded modal-content" src="images/clock_ss.png" alt="Pomodora clock in Javascript" data-toggle="modal" data-target="#clock">
+          <h3 class="text-uppercase">Pomodora Clock developed in Javascript</h3>
+          <p><a href="https://www.codepen.io/belgeron/full/YwPxBm">https://www.codepen.io/belgeron/full/YwPxBm</a></p>
+        </div>.
+        <div class="col-md-4">
+          <img class="img-responsive img-rounded modal-content" src="images/spokes_ss.png" alt="Spokes Website Screenshot" data-toggle="modal" data-target="#game">
+          <h3 class="text-uppercase">Spokes Unlimited Redesign</h3>
+          <p><a href="http://www.spokesunlimited.org">http://www.spokesunlimited.org</a></p>
+        </div>
+        <div class="col-md-4">
+          <img class="img-responsive img-rounded modal-content" src="images/tourist_map.jpg" alt="Local Tourist Map" data-toggle="modal" data-target="#map">
+          <h3 class="text-uppercase">Neighborhood Map</h3>
+          <p><a href="http://belgerion.github.io/map/">http://belgerion.github.io/map/</a></p>
+        </div>
+      </div>
     </div>
 
     <!-- Modal -->
