--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
       <div class="row text-center">
         <div class="col-md-4">
-          <img class="img-responsive img-rounded modal-content" src="images/church_ss.png" alt="Grace website" data-toggle="modal" data-target="#resume">
+          <img class="img-responsive img-rounded modal-content" src="images/church_ss.png" alt="Grace website" data-toggle="modal" data-target="#grace">
           <h3 class="text-uppercase">Grace Baptist Church Website Development</h3>
           <p><a href="http://www.anacondagrace.com">http://www.anacondagrace.com</a></p>
         </div>
@@ -59,21 +59,11 @@
           <h3 class="text-uppercase">Pomodora Clock developed in Javascript</h3>
           <p><a href="https://www.codepen.io/belgeron/full/YwPxBm">https://www.codepen.io/belgeron/full/YwPxBm</a></p>
         </div>.
-        <div class="col-md-4">
-          <img class="img-responsive img-rounded modal-content" src="images/spokes_ss.png" alt="Spokes Website Screenshot" data-toggle="modal" data-target="#game">
-          <h3 class="text-uppercase">Spokes Unlimited Redesign</h3>
-          <p><a href="http://www.spokesunlimited.org">http://www.spokesunlimited.org</a></p>
-        </div>
-        <div class="col-md-4">
-          <img class="img-responsive img-rounded modal-content" src="images/tourist_map.jpg" alt="Local Tourist Map" data-toggle="modal" data-target="#map">
-          <h3 class="text-uppercase">Neighborhood Map</h3>
-          <p><a href="http://belgerion.github.io/map/">http://belgerion.github.io/map/</a></p>
-        </div>
-      </div>
+        
     </div>
 
     <!-- Modal -->
-    <div class="modal fade" id="resume" tabindex="-1" role="dialog" aria-labelledby="resume" aria-hidden="true">
+    <div class="modal fade" id="grace" tabindex="-1" role="dialog" aria-labelledby="resume" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
@@ -114,6 +104,22 @@
           <div class="modal-body">
             <img class="img-responsive img-rounded modal-content" src="images/tourist_map.jpg" alt="Local Tourist Map">
             <p>A responsive Google map of local tourist locations. Takes any U.S. city and finds nearby tourist locations on Google maps, and finds images from Flickr that are tagged with that location. Built using the Knockout.js framework for responsive HTML.</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="modal fade" id="clock" tabindex="-1" role="dialog" aria-labelledby="map" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title" id="clock">Pomodora Clock in Javascript</h4>
+          </div>
+          <div class="modal-body">
+            <img class="img-responsive img-rounded modal-content" src="images/clock_ss.png" alt="Local Tourist Map">
+            <p>A Pomodora clock used to aid in productivity, developed in Javascript using the flipclock api.</p>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
