--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <img class="img-responsive img-rounded modal-content" src="images/code_wallpaper.jpg" alt="Computer Code Wallpaper">
+          <img class="img-responsive img-rounded" src="images/code_wallpaper.jpg" alt="Computer Code Wallpaper">
         </div>
       </div>
       <div class="row">
@@ -31,16 +31,16 @@
       </div>
       <div class="row text-center">
         <div class="col-md-12">
-          <img class="img-responsive img-rounded modal-content" src="images/spokes_ss.png" alt="Spokes Website Screenshot" data-toggle="modal" data-target="#game">
+          <img class="img-responsive img-rounded modal-content" src="images/spokes_ss.png" alt="Spokes Website Screenshot">
           <h3 class="text-uppercase">Spokes Unlimited Redesign</h3>
-          <p><a href="http://www.spokesunlimited.org">http://www.spokesunlimited.org</a></p>
+          <p><a href="http://www.spokesunlimited.org" target="_blank">http://www.spokesunlimited.org</a></p>
         </div>
       </div>
 	  <div class="row text-center">
         <div class="col-md-12">
-          <img class="img-responsive img-rounded modal-content" src="images/clock_ss.png" alt="Pomodora clock in Javascript" data-toggle="modal" data-target="#clock">
+          <img class="img-responsive img-rounded modal-content" src="images/clock_ss.png" alt="Pomodora clock in Javascript">
           <h3 class="text-uppercase">Pomodora Clock developed in Javascript</h3>
-          <p><a href="https://www.codepen.io/belgeron/full/YwPxBm">https://www.codepen.io/belgeron/full/YwPxBm</a></p>
+          <p><a href="https://www.codepen.io/belgeron/full/YwPxBm" target="_blank">https://www.codepen.io/belgeron/full/YwPxBm</a></p>
         </div>    
     </div>
   </body>
