--- a/index.html
+++ b/index.html
@@ -45,20 +45,16 @@
 				<div>
 					<p>A sampling of my work can be viewed below. My portfolio of work can be viewed on GitHub at <a href='https://github.com/belgerion' target='_blank'>https://www.github.com/belgerion</a></p>
 					<div class='col-sm-2'></div>
-					<div class='col-md-8'>
-						<iframe src='http://www.spokesunlimited.org' class='frameWidth'>
-							<p>Your browswer does not support iframe. Please view the website at <a href src='http://www.spokesunlimited.org'>http://www.spokesunlimited.org</a></p>
-						</iframe>
+					<div class='centerText'>
+						<img src='./img/spokesunlimited_ss.png' alt='' class='col-sm-8'/>
 						<p>This website was built for a small non-profit in Klamath Falls, OR. It was built using the Joomla CMS with a customized PHP template, Bootstrap responsiveness, and added JavaScript functionality.</p>
 					</div>
 					<div class='col-sm-2'></div>
 				</div>
 				<div>
 					<div class='col-sm-2'></div>
-					<div class='col-md-8'>
-						<iframe src='http://www.spokesunlimited.org' class='frameWidth'>
-							<p>Your browswer does not support iframe. Please view the website at <a href src='http://www.spokesunlimited.org'>http://www.spokesunlimited.org</a></p>
-						</iframe>
+					<div class='centerText'>
+						<img src='./img/spokesunlimited_ss.png' alt='' class='col-sm-8'/>
 						<p>This website was built for a small non-profit in Klamath Falls, OR. It was built using the Joomla CMS with a customized PHP template, Bootstrap responsiveness, and added JavaScript functionality. It can be viewed at <a href src='http://www.spokesunlimited.org'>http://www.spokesunlimited.org</a> </p>
 					</div>
 					<div class='col-sm-2'></div>
