--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 			<article id='featured'><span class='articleTitle'>Featured Work</span>
 				<div>
 					<p>A sampling of my work can be viewed below. My portfolio of work can be viewed on GitHub at <a href='https://github.com/belgerion' target='_blank'>https://www.github.com/belgerion</a></p>
-					<div class='col-sm-2'></div>
+					<div class='col-lg-2 col-xl-2'></div>
 					<div class='centerText'>
-						<img src='./img/spokesunlimited_ss.png' alt='' class='col-sm-8'/>
+						<img src='./img/spokesunlimited_ss.png' alt='' class='col-lg-8 col-xl-8'/>
 						<p>This website was built for a small non-profit in Klamath Falls, OR. It was built using the Joomla CMS with a customized PHP template, Bootstrap responsiveness, and added JavaScript functionality.</p>
 					</div>
-					<div class='col-sm-2'></div>
+					<div class='col-lg-2 col-xl-2'></div>
 				</div>
 				<div>
 					<div class='col-sm-2'></div>
