updated some issues and added a blog post

--- a/index.html
+++ b/index.html
@@ -70,17 +70,8 @@
 		</div>
 		<div class='row'>
 			<article id='contact'><span class='articleTitle'>Contact Me</span>
-				<p>This will contain a form that will allow for an email to be sent to me from the site. It will also have my contact information.</p>
-				<form action="mailto:belgerion@gmail.com">
-					First name:<br>
-					<input type="text" name="firstname"><br>
-					E-mail:<br>
-					<input type="email" name="email"><br>
-					Your Message:<br>
-					<input type="text" name="message"<br><br>
-					
-					<input type="submit" value="Submit">
-				</form>
+				<p>I can be reached by email at jeffrey_w_barnes@hotmail.com</p>
+				<p>I can be found on LinkedIn at <a href='https://www.linkedin.com/in/jeffrey-barnes-bba90a3b' target='_blank'>my profile</a></p>
 			</article>
 		</div>
 		<div class='row'>
