--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@
 					<p>A sampling of my work can be viewed below. My portfolio of work can be viewed on GitHub at <a href='https://github.com/belgerion' target='_blank'>https://www.github.com/belgerion</a></p>
 					<div class='col-lg-2 col-xl-2'></div>
 					<div class='centerText'>
-						<img src='./img/spokesunlimited_ss.png' alt='' class='col-lg-8 col-xl-8'/>
-						<p>This website was built for a small non-profit in Klamath Falls, OR. It was built using the Joomla CMS with a customized PHP template, Bootstrap responsiveness, and added JavaScript functionality.</p>
+						<img src='./img/karateclub_ss.png' alt='Image of the Anaconda Karate Club website' class='col-lg-8 col-xl-8'/>
+						<p>This website was built for the Anaconda Karate Club, to provide a reference for students at the school. It expanded to include all the areas of training available. It is built using HTML/CSS and JavaScript.</p>
 					</div>
 					<div class='col-lg-2 col-xl-2'></div>
 				</div>
 				<div>
-					<div class='col-sm-2'></div>
+					<div class='col-lg-2 col-xl-2'></div>
 					<div class='centerText'>
-						<img src='./img/spokesunlimited_ss.png' alt='' class='col-sm-8'/>
-						<p>This website was built for a small non-profit in Klamath Falls, OR. It was built using the Joomla CMS with a customized PHP template, Bootstrap responsiveness, and added JavaScript functionality. It can be viewed at <a href src='http://www.spokesunlimited.org'>http://www.spokesunlimited.org</a> </p>
+						<img src='./img/spokesunlimited_ss.png' alt='Image of the Spokes Unlimited website' class='col-lg-8 col-xl-8'/>
+						<p>This website was built for a small non-profit in Klamath Falls, OR. It was built using the Joomla CMS with a customized PHP template, Bootstrap responsiveness, and added JavaScript functionality.</p>
 					</div>
-					<div class='col-sm-2'></div>
+					<div class='col-lg-2 col-xl-2'></div>
 				</div>				
 			</article>
 		</div>
