--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<div class='col-lg-2 col-xl-2'></div>
 					<div class='centerText'>
 						<img src='./img/karateclub_ss.png' alt='Image of the Anaconda Karate Club website' class='col-lg-8 col-xl-8'/>
-						<p>This website was built for the Anaconda Karate Club, to provide a reference for students at the school. It expanded to include all the areas of training available. It is built using HTML/CSS and JavaScript.</p>
+						<p>This website was built for the Anaconda Karate Club, to provide a reference for students at the school. It expanded to include all the areas of training available. It is built using HTML/CSS and JavaScript. The full site can be viewed at <a href='https://belgerion.github.io/karateclub' target='_blank'>https://belgerion.github.io/karateclub</a></p>
 					</div>
 					<div class='col-lg-2 col-xl-2'></div>
 				</div>
