added some new info

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<div class='row'>
 			<article id='about'></article><span class='articleTitle'>About Me</span>
 				<p>I am a front end web developer, with experience coding in JavaScript. I completed a Nano-degree in front end development from Udacity in 2015, but was unable to progress further with my career or education. I had family issues that required me to care for my mother. I spent that time furthering my skills in JavaScript by reading the complete "You Don't Know JS" series.</p>
-				<p>In addition to JavaScript, I do AJAX coding, and am learning React.JS and Angular.JS from the MicroSoft Professional Program in Front-End Web Development on edX.</p>
+				<p>In addition to JavaScript, I do AJAX coding, and am learning TypeScript, and React.JS and Angular.JS, from the MicroSoft Professional Program in Front-End Web Development on edX. I am auditing through the entire program, but those are the topics I am really focusing on. I also plan to add Node.JS when I complete those topics.</p>
 				<p>Along with my education in front end web development, I have a bachelor of science degree in Professional and Technical Communications from Montana Tech. From this, I have experience producing both print and digital documents. I have filmed and edited video for a short video on the field of technical communications and online news sites. And I have experience working with the Adobe PhotoShop and Illustrator to create custom graphics and designs.</p>
 				<p>On the personal side, my hobbies include Karate, Judo, boxing, running and fitness training. I am currently training for my purple belt in Karate at the Anaconda Karate Club, where I have  been training for two years. I also take Judo and boxing there. In Judo, I am a white belt and have been training for about six months. I have been training in boxing for about nine months now.</p>
 				<p>I have been running for fitness for about 15 years. I also have been doing body weight training, and hope to be able to run a Ninja Warrior course, as well as an Iron Man race.</p>
@@ -55,7 +55,7 @@
 					<div class='col-lg-2 col-xl-2'></div>
 					<div class='centerText'>
 						<img src='./img/spokesunlimited_ss.png' alt='Image of the Spokes Unlimited website' class='col-lg-8 col-xl-8'/>
-						<p>This website was built for a small non-profit in Klamath Falls, OR. It was built using the Joomla CMS with a customized PHP template, Bootstrap responsiveness, and added JavaScript functionality.</p>
+						<p>This website was built for a small non-profit in Klamath Falls, OR. It was built using the Joomla CMS with a customized PHP template, Bootstrap responsiveness, and added JavaScript functionality. The live site can be viewed at <a href='http://www.spokesunlimited.org'>www.spokesunlimited.org</a></p>
 					</div>
 					<div class='col-lg-2 col-xl-2'></div>
 				</div>				
